syntax = "proto3";
// protoc -I=$SRC_DIR --go_out=$DST_DIR $SRC_DIR/omega.proto
// protoc --go_out=plugins=grpc:. omega.proto
package omega;

//import "google/protobuf/any.proto";

service OmegaService {
  rpc Pub(PubRequest) returns (PubResponse) {}
  rpc Subscribe(SubscribeReq) returns (SubscribeRsp) {}
}

message PubRequest {
  string namespace = 1;
  string topic_name = 2;
  uint32 partition = 3;
  uint64 hash_code = 4;
  bytes data = 5;
}

message PubResponse {

}

message SubscribeReq {
  message Request {}
  message Response {}
  string namespace = 1;
  string name = 2;
  string topic = 3;
  string route = 4;
  Request request = 5;
  Response response = 6;
//  google.protobuf.Any request = 5;
//  google.protobuf.Any response = 6;
}

message SubscribeRsp {
  sint32 status = 1;
  string message = 2;
}